add expo cli and expo

--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
-  "name": "Pushnotifications",
-  "displayName": "Pushnotifications"
+  "expo": {
+    "name": "My app",
+    "slug": "my-app"
+  }
 }
