--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo": "^41.0.1",
+    "expo-cli": "^4.5.2",
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "^0.64.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
